# cookiecutter-ansible-role

./: .pre-commit-config.yaml  .travis.yml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_cookiecutter-ansible-role.py
{{cookiecutter.role_name}}/meta/: main.yml
{{cookiecutter.role_name}}/tests/: test.yml
