[tool.poetry]
name = "cookiecutter-ansible-role"
version = "0.1.0"
description = "Cookiecutter template providing an opiniated Ansible role with Molecule"
authors = ["Emmanuel Roux <fesaille@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.3.1"
pytest = "^6.1.1"
cookiecutter = "^1.7.2"
GitPython = "^3.1.9"
black = "^20.8b1"
isort = "^5.6.2"
pylint = "^2.6.0"
pre-commit = "^2.7.1"
python-language-server = "^0.35.1"
neovim = "^0.3.1"
mypy = "^0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
